--- a/restaurant.html
+++ b/restaurant.html
@@ -410,7 +410,7 @@
 
     <!-- try free section start -->
     <section class="container try-free d-flex">
-        <div class="try-free-left-container">
+        <div class="try-free-left-container text-sm-center">
             <h2>Try Quickly Restaurant for Free</h2>
             <p>Already using Quickly? <a href="">Sign in</a></p>
         </div>
